# manage-my-trades

./: .env.example  .gitignore  API_DOCUMENTATION.md  CLAUDE.md  README.md  docker-compose.yml  init-db.sql  lefthook.yml
backend/: .env.example  AGENTS.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  alembic_market_data.ini  alembic_trade_data.ini  alpaca_denylist.txt  failed_symbols.txt  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/alembic_market_data/: env.py
backend/alembic_market_data/versions/: 001_market_data_initial.py  002_add_market_data_unique_constraint.py
backend/alembic_trade_data/: env.py
backend/alembic_trade_data/versions/: 001_initial_migration.py  002_seed_golden_cross_strategy.py  003_seed_rsi_mean_reversion_strategy.py  004_signals_link_to_backtest_result.py  005_add_portfolio_tables.py  005_drop_strategy_indicators_table.py
backend/app/: config.py  main.py
backend/app/db/: session.py
backend/app/models/: __init__.py  backtest.py  base.py  market_data.py  ml_model.py  paper_trading.py  portfolio.py  signal.py  strategy.py  trade.py
backend/app/schemas/: __init__.py  backtest.py  market_data.py  portfolio.py  strategy.py  technical_analysis.py
backend/app/services/: alpaca_service.py  alpaca_service_base.py  alpaca_service_http.py  backtest_service.py  indicator_registry.py  langfuse_client.py  market_data_service.py  portfolio_service.py  signal_service.py  strategy_compiler_service.py  strategy_prompt_guard_service.py  strategy_service.py  technical_analysis_service.py
backend/docs/: position-sizing-and-multiple-positions.md
backend/scripts/: retry_failed_symbols.py  update_market_data.py
backend/tests/: conftest.py
frontend/: .env.example  (+6 more)
(+66 files in other folders)
